tests/sema/fail/v20_fail_str_ordering.ep
# COMPILE_FAIL_CONTAINS: string ordering comparison < is not supported
fun main(): void {
    let ordered = "a" < "b"
}
